# ExplorerOne

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32F303VCTX_FLASH.ld
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
cmake/: cppcheck.cmake  docs.cmake  flags.cmake  formatting.cmake  libopencm3.cmake  logging.cmake
docs/: Doxyfile  statemachine.uml
docs/how_to/: serial_monitor.md  work_with_board.md
docs/html/: AlternateFunctionsTable_8hpp_source.html  BaseTimerConfig_8hpp_source.html  BaseTimer_8hpp_source.html  BasicTimerConfig_8hpp.html  BasicTimerConfig_8hpp__dep__incl.map  BasicTimerConfig_8hpp__dep__incl.md5  BasicTimerConfig_8hpp__incl.map  BasicTimerConfig_8hpp__incl.md5  BasicTimerConfig_8hpp_source.html  BasicTimer_8hpp_source.html  Bot_8hpp_source.html  CMSIS_MISRA_Exceptions.html  CriticalSectionGuard_8hpp_source.html  Delay_8hpp.html  Delay_8hpp__dep__incl.map  Delay_8hpp__dep__incl.md5  Delay_8hpp__incl.map  Delay_8hpp__incl.md5  Delay_8hpp_source.html  DriveFactory_8hpp.html  DriveFactory_8hpp__incl.map  DriveFactory_8hpp__incl.md5  DriveFactory_8hpp_source.html  ExtiPin_8hpp.html  ExtiPin_8hpp__incl.map  ExtiPin_8hpp__incl.md5  ExtiPin_8hpp_source.html  FSM_8hpp_source.html  GPIOpin_8hpp_source.html  GeneralPurposeTimerConfig_8hpp.html  GeneralPurposeTimerConfig_8hpp__dep__incl.map  GeneralPurposeTimerConfig_8hpp__dep__incl.md5  GeneralPurposeTimerConfig_8hpp__incl.map  GeneralPurposeTimerConfig_8hpp__incl.md5  GeneralPurposeTimerConfig_8hpp_source.html  GeneralPurposeTimer_8hpp_source.html  GpioPin_8hpp_source.html  ICriticalSectionGuard_8hpp_source.html  IDigitalPin_8hpp_source.html  IDistanceSensor_8hpp_source.html  (+3072 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  (+116 more)
src/: CMakeLists.txt  main.cpp  sysmem.c
src/app/: Bot.cpp  Bot.hpp  CMakeLists.txt  FSM.cpp  FSM.hpp  State.cpp  State.hpp  StateBase.cpp  StateBase.hpp  StateMovingForward.cpp  StateMovingForward.hpp  StateStopped.cpp  StateStopped.hpp  StateTurningToLeft.cpp  StateTurningToLeft.hpp  StateTurningToRight.cpp  StateTurningToRight.hpp  Transition.cpp  Transition.hpp  UltrasonicSensorStub.cpp  UltrasonicSensorStub.hpp
src/common/: AlternateFunctionsTable.hpp  CMakeLists.txt  CriticalSectionGuard.cpp  CriticalSectionGuard.hpp  Delay.cpp  Delay.hpp  PinDefinitions.hpp  Trace.cpp  Trace.hpp  assertHandler.cpp  assertHandler.hpp  defines.hpp  delay.hpp  registerArrays.hpp  ringBuffer.cpp  ringBuffer.hpp  statusCodes.hpp  time.cpp  time.hpp
src/drivers/: CMakeLists.txt
src/drivers/factory/: CMakeLists.txt  PinFactory.cpp  PinFactory.hpp  TimerFactory.cpp  TimerFactory.hpp
src/drivers/interfaces/: CMakeLists.txt  ICriticalSectionGuard.hpp  IDigitalOutputPin.hpp  IDigitalPin.hpp  IDistanceSensor.hpp  IDrive.hpp  IPin.hpp  IPwm.hpp  ISystick.hpp  ITimer.hpp  ITimerChannel.hpp  ITimerChannelConfig.hpp  IrqHandlers.cpp  PinBase.cpp  PinBase.hpp  PinFactory.cpp  PinFactory.hpp  pinBank.hpp
src/drivers/io/: CMakeLists.txt  ExtiPin.cpp  GPIOpin.cpp  GPIOpin.hpp  GpioPin.cpp  GpioPin.hpp  ISRs.cpp  ISRs.hpp  IrqHandlers.cpp  ServiceISRs.cpp  ServiceISRs.hpp  defines.hpp  enums.hpp  io.cpp  io.hpp  pinBank.hpp  registerArrays.hpp
src/drivers/leds/: CMakeLists.txt  leds.cpp  leds.hpp
src/drivers/mcu/: CMakeLists.txt  mcuInit.cpp  mcuInit.hpp
src/drivers/motion/: CMakeLists.txt  DriveFactory.cpp  DriveFactory.hpp  DriveImpl.cpp  DriveImpl.hpp  Mdd3aDriveImpl.cpp  Mdd3aDriveImpl.hpp  Motor.cpp  Motor.hpp
src/drivers/motors/: CMakeLists.txt  DriveFactory.cpp  DriveFactory.hpp  DriveImpl.cpp  DriveImpl.hpp  Motor.cpp  Motor.hpp  MotorBank.hpp
src/drivers/sensors/: CMakeLists.txt  UltrasonicSensor.cpp  UltrasonicSensor.hpp
src/drivers/stm32f3discovery/: CMakeLists.txt
src/drivers/stm32f3discovery/common/: AlternateFunctionsTable.hpp  CMakeLists.txt  IrqHandlers.cpp  Stm32f3CriticalSectionGuard.cpp  Stm32f3CriticalSectionGuard.hpp  SysTickImpl.cpp  SysTickImpl.hpp  registerArrays.hpp
src/drivers/stm32f3discovery/io/: CMakeLists.txt  ExtiPin.cpp  ExtiPin.hpp  GpioPin.cpp  GpioPin.hpp  ServiceISRs.cpp  defines.hpp
src/drivers/stm32f3discovery/leds/: leds.cpp  leds.hpp
src/drivers/stm32f3discovery/mcu/: CMakeLists.txt  mcuInit.cpp  mcuInit.hpp
src/drivers/stm32f3discovery/timers/: BaseTimer.cpp  BaseTimer.hpp  BaseTimerConfig.hpp  BasicTimer.cpp  BasicTimer.hpp  BasicTimerConfig.hpp  CMakeLists.txt  ChannelConfig.cpp  ChannelConfig.hpp  GeneralPurposeTimer.cpp  GeneralPurposeTimer.hpp  GeneralPurposeTimerConfig.cpp  GeneralPurposeTimerConfig.hpp  ServiceISRs.cpp  ServiceISRs.hpp  TimerChannel.cpp  TimerChannel.hpp
src/drivers/stm32f3discovery/usart/: CMakeLists.txt  ServiceISRs.cpp  ServiceISRs.hpp  UsartPin.cpp  UsartPin.hpp
src/drivers/timers/: BasicTimer.cpp  BasicTimer.hpp  CMakeLists.txt  GeneralPurposeTimer.cpp  GeneralPurposeTimer.hpp  GeneralPurposeTimerConfig.cpp  GeneralPurposeTimerConfig.hpp  ITimer.hpp  ServiceISRs.cpp  ServiceISRs.hpp
src/drivers/usart/: CMakeLists.txt  IrqHandlers.cpp  ServiceISRs.cpp  UsartPin.cpp  UsartPin.hpp  enums.hpp  ringBuffer.cpp  ringBuffer.hpp  usart.cpp  usart.hpp
src/stm/: CMakeLists.txt
src/sys/stm32f3/: CMakeLists.txt  syscalls.c
tests/: CMakeLists.txt  basicTimer.cpp  blinky.cpp  blinky.hpp  drive.cpp  generalPurposeTimer.cpp  interrupt.cpp  interrupt.hpp  libopencm3_systick.cpp  main.cpp  pwm.cpp  systickTimer.cpp  usart.cpp
tools/: debug.gdb  flash.gdb
